--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "glue-router",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "glue-router", 
+  "version": "0.1.0",
+  "description": "Client side routing library for server side driven applications.",
+  "main": "./dist/glue-router.cjs.js", 
+  "module": "./dist/glue-router.es.js", 
+  "types": "./dist/index.d.ts", // Types entry
+  "exports": {
+    ".": {
+      "import": "./dist/glue-router.es.js",
+      "require": "./dist/glue-router.cjs.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": ["dist"],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "vite build --watch", // Watch mode for development
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "@types/node": "^25.0.3",
-    "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.2.5",
-    "vite-plugin-dts": "^4.5.4"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+  "keywords": ["typescript", "utility"],
+  "author": "Your Name",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public" // If scoped or first publish
   }
 }
