--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "verbatimModuleSyntax": true,
 
     // Remove DOM types — your library shouldn't assume browser environment
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
 
     // Skip checking third-party types (faster, avoids issues)
     "skipLibCheck": true,
