--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,49 +1,27 @@
 {
   "compilerOptions": {
-    // Target modern JS but safe for most environments
     "target": "ES2020",
-
-    // Recommended for libraries
-    "module": "nodenext",
-    "moduleResolution": "NodeNext",  // Better than "bundler" for libraries publishing to npm
-
-    // Important: Emit files (JS + declarations)
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowJs": false,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
-
-    // Enable isolated modules for better tree-shaking and CJS/ESM interop
-    "isolatedModules": true,
-    "verbatimModuleSyntax": true,
-
-    // Remove DOM types — your library shouldn't assume browser environment
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-
-    // Skip checking third-party types (faster, avoids issues)
-    "skipLibCheck": true,
-
-    // Strict mode (keep most of these)
+    "rootDir": "./src",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-
-    // Recommended for libraries
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-
-    // Allow synthetic default imports (common in libraries)
     "allowSyntheticDefaultImports": true,
-
-    // Remove or comment out these — not needed for libraries
-    // "useDefineForClassFields": true,        // Optional, safe to keep if you like it
-    // "noEmit": true,                         // MUST be removed — we need emission!
-    // "allowImportingTsExtensions": true,     // Only needed for type-only files in apps
-    // "moduleDetection": "force",             // Not needed in library builds
-    // "erasableSyntaxOnly": true,             // Not a real option
-    // "noUncheckedSideEffectImports": true    // Future option, not widely supported yet
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "verbatimModuleSyntax": false
   },
-  "include": ["src"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
